--- a/app/popup.html
+++ b/app/popup.html
@@ -6,9 +6,32 @@
     <title>MetaMask</title>
     <link rel="stylesheet" type="text/css" href="./index.css" title="ltr">
     <link rel="stylesheet" type="text/css" href="./index-rtl.css" title="rtl" disabled>
+    <style>
+     #app-content {
+       display: flex;
+       flex-flow: column;
+     }
+
+     #loading__logo {
+       width: 10rem;
+       height: 10rem;
+       align-self: center;
+       margin: 10rem 0 0 0;
+     }
+
+     #loading__spinner {
+       width: 2rem;
+       height: 2rem;
+       align-self: center;
+       margin-top: 1rem;
+     }
+    </style>
   </head>
   <body style="width:357px; height:600px;">
-    <div id="app-content"></div>
+    <div id="app-content">
+      <img id="loading__logo" src="./images/logo/metamask-fox.svg" alt="" />
+      <img id="loading__spinner" src="./images/spinner.gif" alt="" />
+    </div>
     <div id="popover-content"></div>
     <script src="./globalthis.js" type="text/javascript" charset="utf-8"></script>
     <script src="./sentry-install.js" type="text/javascript" charset="utf-8"></script>
